jalv (1.4.5) unstable;

  * Show newly saved presets in the preset menu

 -- David Robillard <d@drobilla.net>  Sun, 12 Jan 2014 14:53:36 -0500

jalv (1.4.4) stable;

  * Add -c option for setting controls from the command line
  * Add --no-menu option for jalv.gtk
  * Don't expose non-MIDI event ports to Jack
  * Hide controls for ports with notOnGUI property in generic UI
    (based on patch from Robin Gareus)
  * Support ui:portMap feature to allow UIs to avoid hard-coded port indices
    (useful for compatibility and separately distributed UIs)
  * Preset menu support for Qt (patch from Timo Westkämper)

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:11:45 -0500

jalv (1.4.2) stable;

  * Fix crash when running "jalv" with bad command line arguments
  * Fix potential crash with UIs and debug printing
  * Fix parameter changes with Qt UI
  * Nicer printing of atom messages with -d
  * Add command-line option to control UI update frequency
  * Support rsz:minimumSize for atom and event ports
  * Fix default setting for non-sequential enumeration ports
    (patch from Robin Gareus)
  * Work around Gtk bug for labels on sliders (patch from Robin Gareus)
  * Upgrade to waf 1.7.11

 -- David Robillard <d@drobilla.net>  Fri, 09 Aug 2013 10:40:20 -0400

jalv (1.4.0) stable;

  * Send time information to plugin when Jack tempo changes
  * Group controls under headings if port group information is available
  * Add spinbuttons for precisely setting control values
  * Use a more efficient dense layout for controls
  * Make URI map thread-safe, fixing occasional crashes for plugins with UIs
  * Add menu bar and pass parent widget in Qt version for true UI embedding
  * Support state:loadDefaultState
  * Update to waf 1.7.8 and autowaf r90

 -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 22:35:22 -0500

jalv (1.2.0) stable;

  * Tune UI update rate and ring size based on JACK rate and MIDI buffer size